# dit-aws-vpn-home

./: .gitignore  README.md  manifest.yml  pyproject.toml  requirements.in  requirements.txt
config/: settings.py  urls.py
govuk_template/static/stylesheets/: base.css
vpnhome/: apps.py  urls.py  views.py
vpnhome/templates/: home-page.html
