[tool.poetry]
name = "dit-aws-vpn-home"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^2.2.0"
django = "^4.2.8"
django-environ = "^0.11.2"
django-jquery = "^3.1.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
raven = "^6.10.0"
sentry-sdk = ">=1.14.0"
django-staff-sso-client = ">=4.2.1"
django-govuk-template = "^0.8"
django-govuk-forms = "^0.7"
libsass = "^0.23.0"
scss = "^0.8.73"
whitenoise = "^6.7.0"
gunicorn = "^23.0.0"
oauthlib = "^3.2.2"
certifi = "^2024.07.04"
sqlparse = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
